# rm-mvp

./: .gitignore  CMakeLists.txt  OPTIMIZATION_SUMMARY.md  README.md  armor_detection  test_image
.copilot/: todo.txt
_codeql_build_dir/: CMakeCache.txt  Makefile  armor_vision  cmake_install.cmake  step2_main  step3_main  step4_main
app/: main.cpp
config/: camera.yaml  params.yaml
configs/: auto_aim.yaml  camera.yaml
include/: ArmorDetector.h  General.h  PnPSolver.h  armor.hpp  detector.hpp  solver.hpp
include/armor/: color_selector.hpp  io.hpp  lightbar_detector.hpp  pairing.hpp  plate_corners.hpp  pnp_solver.hpp  types.hpp  visualizer.hpp
src/: ArmorDetector.cpp  PnPSolver.cpp  armor.cpp  color_selector.cpp  detector.cpp  io.cpp  lightbar_detector.cpp  main.cpp  pairing.cpp  plate_corners.cpp  pnp_solver.cpp  solver.cpp  test_image.cpp  visualizer.cpp
tools/: math_tools.cpp  probe_input.cpp  step2_main.cpp  step3_main.cpp  step4_main.cpp
